--- a/index.html
+++ b/index.html
@@ -59,76 +59,76 @@
     <script>
         const insects = {
             Wespen: [
-                { image: "deutsche_wespe.jpg", name: "Deutsche Wespe", development: "holometabol" },
-                { image: "gemeine_wespe.jpg", name: "Gemeine Wespe", development: "holometabol" },
-                { image: "Nest_saechsische_wespe.jpg", name: "Nest Sächsische Wespe", development: "holometabol" },
-                { image: "feldwespe.jpg", name: "Feldwespe", development: "holometabol" },
-                { image: "feldwespe_nest.jpg", name: "Nest Feldwespe", development: "holometabol" }
+                { image: ["deutsche_wespe.jpg"], name: "Deutsche Wespe", development: "holometabol" },
+                { image: ["gemeine_wespe.jpg"], name: "Gemeine Wespe", development: "holometabol" },
+                { image: ["Nest_saechsische_wespe.jpg"], name: "Nest Sächsische Wespe", development: "holometabol" },
+                { image: ["feldwespe.jpg"], name: "Feldwespe", development: "holometabol" },
+                { image: ["feldwespe_nest.jpg"], name: "Nest Feldwespe", development: "holometabol" }
             ],
             Käfer: [
-                { image: "reismehlkaefer.jpg", name: "Reismehlkäfer", development: "holometabol" },
-                { image: "brotkaefer.jpg", name: "Brotkäfer", development: "holometabol" },
-                { image: "mehlkaefer.jpg", name: "Mehlkäfer", development: "holometabol" },
-                { image: "getreideplattkaefer.jpg", name: "Getreideplattkäfer", development: "holometabol" },
-                { image: "kornkaefer.jpg", name: "Kornkäfer", development: "holometabol" },
-                { image: "reiskaefer.jpg", name: "Reiskäfer", development: "holometabol" },
-                { image: "gemeiner_nagekaefer.jpg", name: "Gemeiner Nagekäfer", development: "holometabol" },
-                { image: "wollkrautbluetenkaefer.jpg", name: "Wollkrautblütenkäfer", development: "holometabol" },
-                { image: "wollkrautbluetenkaefer_larve.jpg", name: "Wollkrautblütenkäfer Larve", development: "holometabol" },
-                { image: "hausbock.jpg", name: "Hausbock", development: "holometabol" },
-                { image: "getreidekapuziner.jpg", name: "Getreidekapuziner", development: "holometabol" },
-                { image: "maiskaefer.jpg", name: "Maiskäfer", development: "holometabol" },
-                { image: "khaprakaefer.jpg", name: "Khaprakäfer", development: "holometabol" },
-                { image: "speisebohnenkaefer.jpg", name: "Speisebohnenkäfer", development: "holometabol" },
-                { image: "tabakkaefer.jpg", name: "Tabakkäfer", development: "holometabol" },
-                { image: "gemeiner_speckkaefer.jpg", name: "Gemeiner Speckkäfer", development: "holometabol" },
-                { image: "pelzkaefer.jpg", name: "Pelzkäfer", development: "holometabol" },
-                { image: "messingkaefer.jpg", name: "Messingkäfer", development: "holometabol" },
-                { image: "kugelkaefer.jpg", name: "Kugelkäfer", development: "holometabol" },
-                { image: "kraeuterdieb.jpg", name: "Kräuterdieb", development: "holometabol" },
-                { image: "moderkaefer.jpg", name: "Moderkäfer", development: "holometabol" }
+                { image: ["reismehlkaefer.jpg"], name: "Reismehlkäfer", development: "holometabol" },
+                { image: ["brotkaefer.jpg"], name: "Brotkäfer", development: "holometabol" },
+                { image: ["mehlkaefer.jpg"], name: "Mehlkäfer", development: "holometabol" },
+                { image: ["getreideplattkaefer.jpg"], name: "Getreideplattkäfer", development: "holometabol" },
+                { image: ["kornkaefer.jpg"], name: "Kornkäfer", development: "holometabol" },
+                { image: ["reiskaefer.jpg"], name: "Reiskäfer", development: "holometabol" },
+                { image: ["gemeiner_nagekaefer.jpg"], name: "Gemeiner Nagekäfer", development: "holometabol" },
+                { image: ["wollkrautbluetenkaefer.jpg"], name: "Wollkrautblütenkäfer", development: "holometabol" },
+                { image: ["wollkrautbluetenkaefer_larve.jpg"], name: "Wollkrautblütenkäfer Larve", development: "holometabol" },
+                { image: ["hausbock.jpg"], name: "Hausbock", development: "holometabol" },
+                { image: ["getreidekapuziner.jpg"], name: "Getreidekapuziner", development: "holometabol" },
+                { image: ["maiskaefer.jpg"], name: "Maiskäfer", development: "holometabol" },
+                { image: ["khaprakaefer.jpg"], name: "Khaprakäfer", development: "holometabol" },
+                { image: ["speisebohnenkaefer.jpg"], name: "Speisebohnenkäfer", development: "holometabol" },
+                { image: ["tabakkaefer.jpg"], name: "Tabakkäfer", development: "holometabol" },
+                { image: ["gemeiner_speckkaefer.jpg"], name: "Gemeiner Speckkäfer", development: "holometabol" },
+                { image: ["pelzkaefer.jpg"], name: "Pelzkäfer", development: "holometabol" },
+                { image: ["messingkaefer.jpg"], name: "Messingkäfer", development: "holometabol" },
+                { image: ["kugelkaefer.jpg"], name: "Kugelkäfer", development: "holometabol" },
+                { image: ["kraeuterdieb.jpg"], name: "Kräuterdieb", development: "holometabol" },
+                { image: ["moderkaefer.jpg"], name: "Moderkäfer", development: "holometabol" }
             ],
             Schaben: [
-                { image: "deutsche_schabe.jpg", name: "Deutsche Schabe", development: "hemimetabol" },
-                { image: "orientalische_schabe.jpg", name: "Orientalische Schabe", development: "hemimetabol" },
-                { image: "amerikanische_schabe.jpg", name: "Amerikanische Schabe", development: "hemimetabol" },
-                { image: "braunbandschabe.jpg", name: "Braunbandschabe", development: "hemimetabol" },
-                { image: "australische_schabe.jpg", name: "Australische Schabe", development: "hemimetabol" }
+                { image: ["deutsche_schabe.jpg"], name: "Deutsche Schabe", development: "hemimetabol" },
+                { image: ["orientalische_schabe.jpg"], name: "Orientalische Schabe", development: "hemimetabol" },
+                { image: ["amerikanische_schabe.jpg"], name: "Amerikanische Schabe", development: "hemimetabol" },
+                { image: ["braunbandschabe.jpg"], name: "Braunbandschabe", development: "hemimetabol" },
+                { image: ["australische_schabe.jpg"], name: "Australische Schabe", development: "hemimetabol" }
             ],
             Motten: [
-                { image: "doerrobstmotte.jpg", name: "Dörrobstmotte", development: "holometabol" },
-                { image: "mehlmotte.jpg", name: "Mehlmotte", development: "holometabol" },
-                { image: "kleidermotte.jpg", name: "Kleidermotte", development: "holometabol" },
-                { image: "pelzmotte.jpg", name: "Pelzmotte", development: "holometabol" }
+                { image: ["doerrobstmotte.jpg"], name: "Dörrobstmotte", development: "holometabol" },
+                { image: ["mehlmotte.jpg"], name: "Mehlmotte", development: "holometabol" },
+                { image: ["kleidermotte.jpg"], name: "Kleidermotte", development: "holometabol" },
+                { image: ["pelzmotte.jpg"], name: "Pelzmotte", development: "holometabol" }
             ],
             Fischchen: [
-                { image: "silberfischchen.JPG", name: "Silberfischchen", development: "ametabol" },
-                { image: "papierfischchen.jpg", name: "Papierfischchen", development: "ametabol" },
-                { image: "ofenfischchen.jpg", name: "Ofenfischchen", development: "ametabol" }
+                { image: ["silberfischchen.JPG"], name: "Silberfischchen", development: "ametabol" },
+                { image: ["papierfischchen.jpg"], name: "Papierfischchen", development: "ametabol" },
+                { image: ["ofenfischchen.jpg"], name: "Ofenfischchen", development: "ametabol" }
             ],
             Ameisen: [
-                { image: "schwarze_wegameise.jpg", name: "Schwarze Wegameise", development: "holometabol" },
-                { image: "braune_wegameise.jpg", name: "Braune Wegameise", development: "holometabol" },
-                { image: "pharaoameise.jpg", name: "Pharaoameise", development: "holometabol" }
+                { image: ["schwarze_wegameise.jpg"], name: "Schwarze Wegameise", development: "holometabol" },
+                { image: ["braune_wegameise.jpg"], name: "Braune Wegameise", development: "holometabol" },
+                { image: ["pharaoameise.jpg"], name: "Pharaoameise", development: "holometabol" }
             ],
             Wanzen: [
-                { image: "feuerwanze.jpg", name: "Feuerwanze", development: "hemimetabol" },
-                { image: "kiefernzapfenwanze.jpg", name: "Kiefernzapfenwanze", development: "hemimetabol" }
+                { image: ["feuerwanze.jpg"], name: "Feuerwanze", development: "hemimetabol" },
+                { image: ["kiefernzapfenwanze.jpg"], name: "Kiefernzapfenwanze", development: "hemimetabol" }
             ],
             FliegenUndMuecken: [
-                { image: "stubenfliege.jpg", name: "Stubenfliege", development: "holometabol" },
-                { image: "schmeissfliege.jpg", name: "Schmeißfliege", development: "holometabol" },
-                { image: "fruchtfliege.jpg", name: "Fruchtfliege", development: "holometabol" },
-                { image: "hausmuecke.jpg", name: "Hausmücke", development: "holometabol" },
-                { image: "schmetterlingsmuecke.jpg", name: "Schmetterlingsmücke", development: "holometabol" }
+                { image: ["stubenfliege.jpg"], name: "Stubenfliege", development: "holometabol" },
+                { image: ["schmeissfliege.jpg"], name: "Schmeißfliege", development: "holometabol" },
+                { image: ["fruchtfliege.jpg"], name: "Fruchtfliege", development: "holometabol" },
+                { image: ["hausmuecke.jpg"], name: "Hausmücke", development: "holometabol" },
+                { image: ["schmetterlingsmuecke.jpg"], name: "Schmetterlingsmücke", development: "holometabol" }
             ],
             Sonstige: [
-                { image: "katzenfloh.jpg", name: "Floh", development: "holometabol" },
-                { image: "maeuseassel.jpg", name: "Assel", development: "ametabol" },
-                { image: "bettwanze.jpg", name: "Bettwanze", development: "hemimetabol" },
-                { image: "rote_vogelmilbe.jpg", name: "Rote Vogelmilbe", development: "hemimetabol" },
-                { image: "taubenzecke.jpg", name: "Taubenzecke", development: "hemimetabol" },
-                { image: "heimchen.jpg", name: "Heimchen", development: "hemimetabol" }
+                { image: ["katzenfloh.jpg"], name: "Floh", development: "holometabol" },
+                { image: ["maeuseassel.jpg"], name: "Assel", development: "ametabol" },
+                { image: ["bettwanze.jpg"], name: "Bettwanze", development: "hemimetabol" },
+                { image: ["rote_vogelmilbe.jpg"], name: "Rote Vogelmilbe", development: "hemimetabol" },
+                { image: ["taubenzecke.jpg"], name: "Taubenzecke", development: "hemimetabol" },
+                { image: ["heimchen.jpg"], name: "Heimchen", development: "hemimetabol" }
             ]
         };
 
@@ -152,72 +152,79 @@
             return categoryInsects[Math.floor(Math.random() * categoryInsects.length)];
         }
 
-        function loadNewQuestion() {
-            if (questionType === "image") {
-                // Normal question: Show insect image and ask for the insect name
-                currentCategory = getRandomCategory();
-                currentInsect = getRandomInsect(currentCategory);
+      function loadNewQuestion() {
+    if (questionType === "image") {
+        // Normal question: Show insect image and ask for the insect name
+        currentCategory = getRandomCategory();
+        currentInsect = getRandomInsect(currentCategory);
 
-                const imageElement = document.getElementById("question-image");
-                const optionsContainer = document.getElementById("options-container");
-                const questionText = document.getElementById("question-text");
+        const imageElement = document.getElementById("question-image");
+        const optionsContainer = document.getElementById("options-container");
+        const questionText = document.getElementById("question-text");
 
-                imageElement.src = currentInsect.image;
-                imageElement.alt = currentInsect.name;
+        // Zufälliges Bild aus dem Array auswählen
+        const randomImage = currentInsect.images[Math.floor(Math.random() * currentInsect.images.length)];
 
-                questionText.textContent = "Welches Insekt ist das?";
+        imageElement.src = randomImage;
+        imageElement.alt = currentInsect.name;
 
-                const categoryInsects = insects[currentCategory];
-                const options = [...categoryInsects].sort(() => Math.random() - 0.5).slice(0, 4);
+        questionText.textContent = "Welches Insekt ist das?";
 
-                if (!options.some(option => option.name === currentInsect.name)) {
-                    options[Math.floor(Math.random() * options.length)] = currentInsect;
-                }
+        const categoryInsects = insects[currentCategory];
+        const options = [...categoryInsects].sort(() => Math.random() - 0.5).slice(0, 4);
 
-                optionsContainer.innerHTML = "";
-                options.forEach(option => {
-                    const button = document.createElement("button");
-                    button.classList.add("option");
-                    button.textContent = option.name;
-                    button.onclick = () => checkAnswer(option.name);
-                    optionsContainer.appendChild(button);
-                });
-
-                imageElement.style.display = "block";
-                questionType = "development"; // Next question should be about development
-            } else if (questionType === "development") {
-                // Development question: Show an insect and ask for the development type
-                currentCategory = getRandomCategory();
-                currentInsect = getRandomInsect(currentCategory);
-
-                const imageElement = document.getElementById("question-image");
-                const optionsContainer = document.getElementById("options-container");
-                const questionText = document.getElementById("question-text");
-
-                imageElement.src = currentInsect.image;
-                imageElement.alt = currentInsect.name;
-
-                questionText.textContent = `Wie entwickelt sich die ${currentInsect.name}?`;
-
-                const options = [
-                    "holometabol",
-                    "hemimetabol",
-                    "ametabol"
-                ];
-
-                optionsContainer.innerHTML = "";
-                options.forEach(option => {
-                    const button = document.createElement("button");
-                    button.classList.add("option");
-                    button.textContent = option;
-                    button.onclick = () => checkDevelopmentAnswer(option);
-                    optionsContainer.appendChild(button);
-                });
-
-                imageElement.style.display = "block";
-                questionType = "image"; // Next question should be about insect image
-            }
+        if (!options.some(option => option.name === currentInsect.name)) {
+            options[Math.floor(Math.random() * options.length)] = currentInsect;
         }
+
+        optionsContainer.innerHTML = "";
+        options.forEach(option => {
+            const button = document.createElement("button");
+            button.classList.add("option");
+            button.textContent = option.name;
+            button.onclick = () => checkAnswer(option.name);
+            optionsContainer.appendChild(button);
+        });
+
+        imageElement.style.display = "block";
+        questionType = "development"; // Next question should be about development
+    } else if (questionType === "development") {
+        // Development question: Show an insect and ask for the development type
+        currentCategory = getRandomCategory();
+        currentInsect = getRandomInsect(currentCategory);
+
+        const imageElement = document.getElementById("question-image");
+        const optionsContainer = document.getElementById("options-container");
+        const questionText = document.getElementById("question-text");
+
+        // Zufälliges Bild aus dem Array auswählen
+        const randomImage = currentInsect.images[Math.floor(Math.random() * currentInsect.images.length)];
+
+        imageElement.src = randomImage;
+        imageElement.alt = currentInsect.name;
+
+        questionText.textContent = `Wie entwickelt sich die ${currentInsect.name}?`;
+
+        const options = [
+            "holometabol (Komplette Metamorphose)",
+            "hemimetabol (Unvollständige Metamorphose)",
+            "ametabol (Keine Metamorphose)"
+        ];
+
+        optionsContainer.innerHTML = "";
+        options.forEach(option => {
+            const button = document.createElement("button");
+            button.classList.add("option");
+            button.textContent = option;
+            button.onclick = () => checkDevelopmentAnswer(option);
+            optionsContainer.appendChild(button);
+        });
+
+        imageElement.style.display = "block";
+        questionType = "image"; // Next question should be about insect image
+    }
+}
+
 
         function checkAnswer(selectedName) {
             if (selectedName === currentInsect.name) {
