--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -102,7 +102,7 @@
             {
                 art: "Nervengift",
                 wirkungsort: "Axon",
-                funktionsweise: "Chitinsynthesehemmer",
+                funktionsweise: "Halten die spannungsabhängigen Natriumkanäle offen",
                 wirkstoffgruppe: "Chrysanthemum cinerariaefolium",
                 wirkstoffe: ["Pyrethrum", "Pyrethrine"]
             },
