--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -25,7 +25,7 @@
             margin: 20px 0;
         }
         .option {
-            margin: 10px 0;
+            margin: 10px 5px;
             padding: 10px 15px;
             background: #007BFF;
             color: white;
