--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             margin: 0 auto;
         }
         .option {
-            margin: 10px 0;
+            margin: 10px 5px;
             padding: 10px 15px;
             background: #007BFF;
             color: white;
