--- a/index.html
+++ b/index.html
@@ -244,5 +244,6 @@
 
         window.onload = loadNewQuestion;
     </script>
+    <a href="https://PietPestControl.github.io/Schadinsekten_quiz/quiz2/">Wirkstoff Quiz</a>
 </body>
 </html>
