--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </style>
 </head>
 <body>
+    <a href="https://PietPestControl.github.io/Schadinsekten_quiz/quiz2/">Wirkstoff Quiz</a>
     <div id="quiz-container">
         <h1>Insekten Quiz</h1>
         <div id="quiz-content">
